<resources>
    <string name="app_name">Car Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="categorias">Categorias</string>
    <string name="perfil">Perfil</string>
    <string name="agregar_categoria">Agregar Categoria</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar">Agregar</string>
    <string name="nombre">Nombre</string>
    <string name="aun_no_hay_registro">Aun no hay carros Registro</string>
    <string name="categoria">Categoria:</string>
    <string name="Precio">Precio: </string>
    <string name="asientos">Asientos</string>
    <string name="carro_nuevo">Carro Nuevo ?</string>
    <string name="selected_item">Selecionar</string>
    <string name="a_o">Año:</string>
    <string name="editar">Editar</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="isNew">Nuevo</string>
    <string name="isUsed">Usado</string>


    <string-array name="isNew">
        <item>Si</item>
        <item>No</item>
    </string-array>
</resources>