<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    >

    <TextView
        android:id="@+id/tv_title_edit_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="Editar Carro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_edit_car_model"
        android:layout_width="171dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Modelo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/et_edit_price"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_edit_car" />

    <Button
        android:id="@+id/btn_cancel_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorDanger"
        android:text="@string/cancelar"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_send_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_edit" />

    <Button
        android:id="@+id/btn_send_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:text="@string/agregar"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel_edit"
        app:layout_constraintTop_toBottomOf="@+id/spinner_edit" />

    <EditText
        android:id="@+id/et_edit_price"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/Precio"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_edit_car" />


    <EditText
        android:id="@+id/et_num_set_edit"
        android:layout_width="139dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="Asientos"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_car_model"
        tools:layout_editor_absoluteX="13dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etd_date_release_edit"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="Año"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toEndOf="@+id/et_num_set_edit"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_price"
        tools:ignore="MissingConstraints,TextFields" />

    <TextView
        android:id="@+id/tv_nuevo_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/carro_nuevo"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/et_specify_edit"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_num_set_edit" />

    <Spinner
        android:id="@+id/spinner_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nuevo_edit" />

    <EditText
        android:id="@+id/et_specify_edit"
        android:layout_width="203dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="specify"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etd_date_release_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>